--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,6 @@
   --font-poppins: 'Poppins', sans-serif;
   --font-urbanist: 'Urbanist', sans-serif;
   --font-sf-pro: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
+  --font-roboto-flex: 'Roboto Flex', sans-serif;
+  --font-inter: 'Inter', sans-serif;
 }
